CreateGrammar.txt
CREATE ::= CREATE CREATEP FINSENTENCIA

CREATEP ::= TABLE CREATET1
        |   USER CREATEU1
        |   VIEW CREATEU1
        |   DATABASE CREATED1
        |   INDEX CREATEI1

CREATET1 ::= OBJECT CREATET2 CREATET5

CREATET2 ::= ID CREATET4 COLUMNC4
                |TABLECON CREATET3 
                |TABIND COLUMNC4

CREATET3 ::= , TABLECON CREATET3
                |VACIO

CREATET4 ::= COLUMN_DEF
        |       CCD

CREATET5 ::= , CREATET2
                |VACIO

SEED ::= ENTERO
        |DOUBLENUM

COLUMN_DEF ::= DATATYPE COLUMN_DEF2

COLUMN_DEF2 ::= COLLATE IDENTIFICADOR COLUMNDEF3
                |COLUMNDEF3

COLUMNDEF3 ::= CONSTRAINT IDENTIFICADOR COLUMNDEF4              
                |COLUMNDEF5

COLUMNDEF4 ::= DEFAULT CONST COLUMNDEF5
                |COLUMNDEF5

COLUMNDEF5 ::= IDENTITY COLUMNDEF6
                |COLUMNDEF7
COLUMNDEF6 ::= ( SEED, SEED) COLUMNDEF7
                |COLUMNDEF7

COLUMNDEF7 ::= NOT COLUMNDEF8 
                |COLUMNDEF9

COLUMNDEF8 ::=  FOR REPLICATION COLUMNDEF9
                NULL COLUMNDEF10

COLUMNDEF9 ::= NOT NULL COLUMNDEF10
                |NULL COLUMNDEF10
                |COLUMNDEF10

COLUMNDEF10 ::= ROWGUIDCOL COLUMNDEF11
                |COLUMNDEF11

COLUMNDEF11 ::= COLUMNCONSTRAINT COLUMNDEF12
                |COLUMNDEF12

COLUMNDEF12 ::= COL_IND
                |VACIO

COLUMNCONSTRAINT ::= CONSTRAINT IDENTIFICADOR COLUMNC2 
                        |COLUMNC2

COLUMNC2 ::= PRIMARY KEY COLUMNC3
                |UNIQUE COLUMNC3
                |FOREIGN COLUMNC5
                |REFERENCES COLUMC5
                |CHECK COLUMC16

COLUMNC3 ::= CLUSTERED COLUMNC4
                |NONCLUSTERED COLUMNC4
                |COLUMNC4

COLUMNC4 ::= ON IDENTIFICADOR ( IDENTIFICADOR)
                |IDENTIFICADOR 
                |VACIO

COLUMN5 ::= FOREIGN KEY COLUMNC6
                |COLUMNC6
                

COLUMNC6 ::= REFERENCES IDENTIFICADOR COLUMNC7

COLUMNC7 ::= "."IDENTIFICADOR COLUMNC8
                |COLUMNC8

COLUMNC8 ::= (IDENTIFICADOR COLUMNC10) COLUMNC9
                |COLUMNC9

COLUMNC10 ::= , IDENTIFICADOR COLUMNC10
                |VACIO

COLUMNC9 ::= ON COLUMNC11
                |COLUMN15

COLUMNC11 ::= DELETE COLUMC12 COLUMNC14
                |UPDATE COLUMNC12 COLUMN15

COLUMNC12 ::= NO ACTION
                |CASCADE 
                |SET COLUMNC13

COLUMNC13 ::= NULL
                |DEFAULT

COLUMNC14 ::= ON UPDATE COLUMC12 COLUMNC15
                |COLUMNC15

COLUMNC15 ::= NOT FOR REPLICATION
                |VACIO

COLUMNC16 ::= CHECK COLUMNC17 (EXPRESION)

COLUMNC17 ::= NOT FOR REPLICATION
                |VACIO


COL_IND ::= INDEX ID COL_IND1 COL_IND2

COL_IND1 ::= CLUSTERED
        |       NONCLUSTERED
        |       VACIO

COL_IND2 ::= COLUMNC4

CCD ::= AS ID COLUMNC2

TABLECON ::= CONSTRAINT ID TABLECON1
        |       TABLECON1

TABLECON1 ::= PRIMARY KEY TABLECON2 TABLECON3
        |       UNIQUE  TABLECON2 TABLECON3
        |       FOREIGN KEY (ID TABLECON7) COLUMNC6
        |       CHECK COLUMNC16

TABLECON2 ::= CLUSTERED
        |       NONCLUSTERED
        |       VACIO

TABLECON3 ::= (TABLECON8) COLUMNC4

TABLECON8 ::= ID TABLECON4

TABLECON4 ::= ASC TABLECON6
        |       DESC TABLECON6
        |       TABLECON6

TABLECON6 ::= , TABLECON8
        |       VACIO

TABLECON7 ::= , ID TABLECON7
        |       VACIO

TABIND ::= INDEX ID TABLECON2 (TABLECON8) COLUMNC4 
