AnalizadorLexico/MiniSQL/AnalizadorSintactico.java
package MiniSQL;

import java.lang.Object;
import java.lang.String;
import java.io.PrintWriter;
import java.io.File;
import java.util.ArrayList;
import java.util.List;
import java.lang.System;
import java.io.Console;
import java.io.InputStream;
import java.util.Scanner;

public class AnalizadorSintactico {

    public ArrayList<MyTOKEN> TOKENS = new ArrayList<MyTOKEN>();
    public MyTOKEN tokenActual;
    public boolean errorSentenciaAcutal = false;
    public int errores = 0;
    public int longitud = 0;
    public int numToken = 0;

    public void Analizar(){
        nextToken();
        Inicio();
        //System.out.print(TOKENS.size());
    }

    public void error(){
        errorSentenciaAcutal = true;
    }

    public void resetErrores(){
        errorSentenciaAcutal = false;
    }

    public AnalizadorSintactico(ArrayList<MyTOKEN> tok){
        TOKENS = tok;
        TOKENS.add(new MyTOKEN("FINARCHIVO", "FINARCHIVO",0,0));
        longitud = TOKENS.size();
    }

    public void printError(String expectedToken){
        System.out.println("Error en la Linea: " + tokenActual.fila + ", columna: " + tokenActual.columna + ", se esperaba: " + expectedToken);
    }

    public void consumirToken(){
        TOKENS.remove(0);
        longitud = longitud - 1;
        //numToken++;
    }

    public void nextToken(){
        tokenActual = TOKENS.get(0);
    }

    public void manejoErrores(){
        errorSentenciaAcutal = true;
    }

    public void devourToken(){
        if(errorSentenciaAcutal){
            if(tokenActual.Token.equals(";") || tokenActual.Token.equals("GO")){
                consumirToken();
                nextToken();
                errorSentenciaAcutal = false;
                Inicio();
            }else{
                consumirToken();
            }
        }
    }

    /*
    public void SearchC(){
        SearchCWMatch();
        SearchC2();
    }

    public void SearchC2(){
        if(tokenActual.Token.equals("AND")){
            consumirToken();
            nextToken();
            SearchC();
        }
    }
    */
    public void Inicio(){
        devourToken();
        if(tokenActual.Token.equals("DELETE")){
            DELETE1();
        }else if(tokenActual.Token.equals("DROP")){
            DROP();
        }else if(tokenActual.Token.equals("ALTER")){
            ALTERP();
        }else if(tokenActual.Token.equals("TRUNCATE")){
            TRUNC();
        }else if(tokenActual.Token.equals("SELECT")){
            SELECT();
        }else if(tokenActual.Token.equals("UPDATE")){
            UPDATE();
        }else if(tokenActual.Token.equals("INSERT")){
            INSERT();
        }else if(tokenActual.Token.equals("CREATE")){
            CREATE();
        }else if(tokenActual.Token.equals("FINARCHIVO")){
            System.out.println("Se termino de analizar el archivo");
        }
    }

    public void TRUNC(){
        devourToken();
        if(tokenActual.Token.equals("TRUNCATE")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("TABLE")){
                consumirToken();
                nextToken();
                OBJECT();
                FinSentencia();
            }
        }
    }

    public void ALTERP(){
        devourToken();
        if(tokenActual.Token.equals("ALTER")){
            consumirToken();
            nextToken();
            ALTERP1();
            FinSentencia();
        }
    }

    public void ALTERP1(){
        devourToken();
        if(tokenActual.Token.equals("VIEW")){
            ALTERV();
        }else if(tokenActual.Token.equals("USER")){
            ALTERU();
        }else if(tokenActual.Token.equals("DATABASE")){
            ALTERD();
        }else if(tokenActual.Token.equals("TABLE")){
            ALTERT();
        }
    }

    public void ALTERT(){
        devourToken();
        if(tokenActual.Token.equals("TABLE")){
            consumirToken();
            nextToken();
            OBJECT();
            ALTERT1();
        }
    }

    public void ALTER1(){
        devourToken();
        if(tokenActual.Token.equals("ALTER")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("COLUMN")){
                consumirToken();
                nextToken();
                if(tokenActual.tipo.equals("Identificador")){
                    consumirToken();
                    nextToken();
                    ALTERT1();
                }else{
                    printError("Identificador");
                }
            }else{
                printError("COLUMN");
            }
        }else if(tokenActual.Token.equals("ADD")){
            consumirToken();
            nextToken();
            ALTERT8();
        }else if(tokenActual.Token.equals("DROP")){
            consumirToken();
            nextToken();
            ALTERT10();
        }
    }

    public void ALTERT1(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            ALTERT2();
        }else{
            ALTERT6();
        }
    }

    public void ALTERT2(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                ALTERT3();
            }else{
                printError("Identificador");
            }
        }else{
            ALTERT2();
        }
    }

    public void ENT(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Entero")){
                consumirToken();
                nextToken();
            }else{
                printError("Entero");
            }
        }
    }

    public void ALTERT3(){
        devourToken();
        if(tokenActual.Token.equals("(")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Entero")){
                consumirToken();
                nextToken();
                ENT();
                if(tokenActual.Token.equals(")")){
                    consumirToken();
                    nextToken();
                    ALTERT4();
                }else{
                    printError(")");
                }
            }else{
                printError("Entero");
            }
        }else{
            ALTERT4();
        }
    }

    public void ALTERT4(){
        devourToken();
        if(tokenActual.Token.equals("COLLATE")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                ALTERT5();
            }else{
                printError("Identificador");
            }
        }else{
            ALTERT5();
        }
    }

    public void ALTERT5(){
        devourToken();
        if(tokenActual.Token.equals("NULL")){
            consumirToken();
            nextToken();
        }else if(tokenActual.Token.equals("NOT")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("NULL")){
                consumirToken();
                nextToken();
            }else{
                printError("NULL");
            }
        }
    }

    public void ALTERT6(){
        devourToken();
        if(tokenActual.Token.equals("ADD")){
            consumirToken();
            nextToken();
            ALTERT7();
        }else if(tokenActual.Token.equals("DROP")){
            consumirToken();
            nextToken();
            ALTERT7();
        }else{
            printError("ADD o DROP");
        }
    }
    
    public void ALTERT7(){
        devourToken();
        if(tokenActual.Token.equals("ROWGUIDCOL")){
            consumirToken();
            nextToken();
        }else if(tokenActual.Token.equals("NOT")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("FOR")){
                consumirToken();
                nextToken();
                if(tokenActual.Token.equals("REPLICATION")){
                    consumirToken();
                    nextToken();
                }else{
                    printError("REPLICATION");
                }
            }else{
                printError("FOR");
            }
        }else{
            printError("NOT o ROWGUIDCOL");
        }
    }

    public void ALTERT8(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("AS")){
                CCD();
                ALTERT9();
            }else if(tokenActual.Token.equals("BIT") || tokenActual.Token.equals("INT") || tokenActual.Token.equals("INTEGER") || tokenActual.Token.equals("FLOAT") || tokenActual.Token.equals("VARCHAR") || tokenActual.Token.equals("DATE") || tokenActual.Token.equals("REAL") || tokenActual.Token.equals("DECIMAL") || tokenActual.Token.equals("NUMERIC") || tokenActual.Token.equals("SMALLINT") || tokenActual.Token.equals("TIME") || tokenActual.Token.equals("CHAR") || tokenActual.Token.equals("NCHAR")){
                COLUMN_DEF();
                ALTERT9();
            }
        }else if(tokenActual.Token.equals("CONSTRAINT")){
            consumirToken();
            nextToken();
        }else{
            printError("Identificador o DATATYPE");
        }
    }

    public void ALTERT9(){
        devourToken();
        if(tokenActual.Token.equals(",")){ 
            consumirToken();
            nextToken();
            ALTERT8();
        }
    }

    public void ALTERT10(){
        devourToken();
        if(tokenActual.Token.equals("COLUMN")){
            consumirToken();
            nextToken();
            ALTERT12();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                ALTERT13();
            }else{
                printError("Identificador");
            }
        }else{
            ALTERT11();
            ALTERT12();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                ALTERT13();
            }
        }
    }

    public void ALTERT11(){
        devourToken();
        if(tokenActual.Token.equals("CONSTRAINT")){
            consumirToken();
            nextToken();
        }
    }

    public void ALTERT12(){
        devourToken();
        if(tokenActual.Token.equals("IF")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("EXISTS")){
                consumirToken();
                nextToken();
            }else{
                printError("EXISTS");
            }
        }
    }

    public void ALTERT13(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                ALTERT13();
            }else{
                printError("Identificador");
            }
        }
    }

    public void ALTERD(){
        devourToken();
        if(tokenActual.Token.equals("DATABASE")){
            consumirToken();
            nextToken();
            ALTERD1();
        }
    }

    public void ALTERD1(){
        devourToken();
        if(tokenActual.Token.equals("CURRENT")){
            consumirToken();
            nextToken();
            ALTERD2();
        }else if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            ALTERD2();
        }
    }

    public void ALTERD2(){
        devourToken();
        if(tokenActual.Token.equals("COLLATE")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
            }else{
                printError("Identificador");
            }
        }else{
            printError("COLLATE");
        }
    }

    public void ALTERU(){
        devourToken();
        if(tokenActual.Token.equals("USER")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
            }else{
                printError("Identificador");
            }
        }else{
            printError("USER");
        }
    }

    public void ALTERV(){
        devourToken();
        if(tokenActual.Token.equals("VIEW")){
            consumirToken();
            nextToken();
            ALTERV1();
            ALTERV3();
            /*if(tokenActual.Token.equals("AS")){
                consumirToken();
                nextToken();
                SELECT_STATEMENT();
                ALTERV5();
            }else{
                printError("AS");
            }*/
        }else{
            printError("VIEW");
        }
    }

    public void ALTERV1(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            ALTERV2();
        }else{
            printError("Identificador");
        }
    }

    public void ALTERV2(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
            }else{
                printError("Identificador");
            }
        }
    }

    public void ALTERV3(){
        devourToken();
        if(tokenActual.Token.equals("(")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                ALTERV4();
            }else{
                printError("Identificador");
            }
        }
    }

    public void ALTERV4(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                ALTERV4();
            }else{
                printError("Identificador");
            }
        }else if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals(")")){
                consumirToken();
                nextToken();
            }else{
                printError(")");
            }
        }else{
            printError(", o Identificador");
        }
    }

    public void ALTERV5(){
        devourToken();
        if(tokenActual.Token.equals("WITH")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("CHECK")){
                consumirToken();
                nextToken();
                if(tokenActual.Token.equals("OPTION")){
                    consumirToken();
                    nextToken();
                }else{
                    printError("OPTION");
                }
            }else{
                printError("CHECK");
            }
        }
    }

    public void DELETE1(){
        devourToken();
        if (tokenActual.Token.equals("DELETE")){
            consumirToken();
            nextToken();
            DEL2();
        }else{
            printError("DELETE");
        }
    }

    public void DROP(){
        devourToken();
        if(tokenActual.Token.equals("DROP")){
            consumirToken();
            nextToken();
            DROPP();
            FinSentencia();
        }
    }

    public void DROPP(){
        devourToken();
        if(tokenActual.Token.equals("TABLE")){
            DROPT();
        }else if(tokenActual.Token.equals("DATABASE")){
            DROPD();
        }else if(tokenActual.Token.equals("USER")){
            DROPU();
        }else if(tokenActual.Token.equals("VIEW")){
            DROPV();
        }else if(tokenActual.Token.equals("INDEX")){
            DROPI();
        }else{
            printError("la palabra reservada TABLE, DATABASE, USER, VIEW o INDEX");
        }
    }

    public void DROPI(){
        devourToken();
        if(tokenActual.Token.equals("INDEX")){
            consumirToken();
            nextToken();
            IFEXI();
        }else{
            printError("INDEX");
        }
    }

    public void IFEXI(){
        devourToken();
        if(tokenActual.Token.equals("IF")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("EXISTS")){
                consumirToken();
                nextToken();
                IFEXI1();
            }else{
                printError("EXISTS");
            }
        }else{
            IFEXI1();
        }
    }

    public void IFEXI1(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            DROPI1();
        }else{
            printError("Identificador");
        }
    }

    public void DROPI1(){
        devourToken();
        if(tokenActual.Token.equals("ON")){
            consumirToken();
            nextToken();
            OBJECT();
            DROPI3();
        }else if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                DROPI2();
            }else{
                printError("Identificador");
            }
        }else{
            printError(". o la palabra reservada ON");
        }
    }

    public void DROPI2(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                DROPI3();
            }else{
                printError("Identificador");
            }
        }else{
            DROPI3();
        }
    }

    public void DROPI3(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            IFEXT1();
        }
    }

    public void DROPV(){
        devourToken();
        if(tokenActual.Token.equals("VIEW")){
            consumirToken();
            nextToken();
            IFEXV();
        }else{
            printError("VIEW");
        }
    }

    public void IFEXV(){
        devourToken();
        if(tokenActual.Token.equals("IF")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("EXISTS")){
                consumirToken();
                nextToken();
                IFEXV1();
            }else{
                printError("EXISTS");
            }
        }else{
            IFEXV1();
        }
    }

    public void IFEXV1(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            IFEXV2();
        }else{
            IFEXV2();
        }
    }

    public void IFEXV2(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                IFEXV3();
            }else{
                printError("Identificador");
            }
        }else{
            IFEXV3();
        }
    }

    public void IFEXV3(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            IFEXV1();
        }
    }

    public void DROPU(){
        devourToken();
        if(tokenActual.Token.equals("USER")){
            consumirToken();
            nextToken();
            IFEXU();
        }else{
            printError("USER");
        }
    }
    
    public void IFEXU(){
        devourToken();
        if(tokenActual.Token.equals("IF")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("EXISTS")){
                consumirToken();
                nextToken();
                IFEXU1();
            }else{
                printError("EXISTS");
            }
        }else{
            IFEXU1();
        }
    }

    public void IFEXU1(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
        }else{
            printError("Identificador");
        }
    }

    public void DROPD(){
        devourToken();
        if(tokenActual.Token.equals("DATABASE")){
            consumirToken();
            nextToken();
            IFEXD();
        }
    }

    public void DROPT(){
        devourToken();
        if(tokenActual.Token.equals("TABLE")){
            consumirToken();
            nextToken();
            IFEXT();
        }else{
            printError("TABLE");
        }
    }

    public void IFEXD(){
        devourToken();
        if(tokenActual.Token.equals("IF")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("EXISTS")){
                consumirToken();
                nextToken();
                IFEXD1();
            }else{
                printError("EXISTS");
            }
        }else{
            IFEXD1();
        }
    }

    public void IFEXD1(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            IFEXD2();
        }
    }
    
    public void IFEXD2(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            IFEXD1();
        }
    }

    public void IFEXT(){
        devourToken();
        if(tokenActual.Token.equals("IF")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("EXISTS")){
                consumirToken();
                nextToken();
                IFEXT1();
            }else{
                printError("EXISTS");
            }
        }else{
            IFEXT1();
        }
    }

    public void IFEXT1(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            IFEXT2();
        }else{
            printError("Identificador");
        }
    }

    public void IFEXT2(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                IFEXT3();
            }else{
                printError("Identificador");
            }
        }else{
            IFEXT3();
        }
    }

    public void IFEXT3(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                IFEXT4();
            }else{
                printError("Identificador");
            }
        }else{
            IFEXT4();
        }
    }

    public void IFEXT4(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            IFEXT1();
        }
    }

    public void OBJECT(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            OBJ1();
        }
    }

    public void OBJ1(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                OBJ2();
            }else{
                printError("Identificador");
            }
        }else{
            OBJ2();
        }
    }

    public void OBJ2(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                OBJ3();
            }else{
                printError("Identificador");
            }
        }else{
            OBJ3();
        }
    }

    public void OBJ3(){
        devourToken();
        if(tokenActual.Token.equals(".")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
            }else{
                printError("Identificador");
            }
        }
    }

    public void DROPT2(){
        devourToken();
        if(tokenActual.Token.equals("IF")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("EXISTS")){
                consumirToken();
                nextToken();
                DROPT3();
            }else{
                printError("EXISTS");
            }
        }else{
            DROPT3();
        }
    }

    public void DROPT3(){
        devourToken();
        OBJECT();
        DROPT4();
    }

    public void DROPT4(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            DROPT3();
        }else{
            FinSentencia();
        }
    }

    public void DEL2(){
        devourToken();
        if(tokenActual.Token.equals("TOP")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("(")){
                consumirToken();
                nextToken();
                SEXP();
                if(tokenActual.Token.equals(")")){
                    consumirToken();
                    nextToken();
                    DEL2();
                }else{
                    printError(")");
                }
            }else{
                printError("(");
            }
        }else{
            DEL4();
        }
    }

    public void DEL3(){
        devourToken();
        if(tokenActual.Token.equals("PERCENT")){
            consumirToken();
            nextToken();
            DEL4();
        }else{
            DEL4();
        }
    }

    public void DEL4(){
        devourToken();
        if(tokenActual.Token.equals("FROM")){
            consumirToken();
            nextToken();
            DEL5();
        }else{
            DEL5();
        }
    }

    public void DEL5(){
        devourToken();
        if(tokenActual.Token.equals("@")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
            }else{
                printError("Identificador");
            }
        }else if(tokenActual.tipo.equals("Identificador")){
            OBJECT();
            DEL6();
        }else{
            printError("@ID o Identificador");
        }
    }

    public void DEL6(){
        devourToken();
        if(tokenActual.Token.equals("OUTPUT")){
            OutputC(); //no se consume token porque en OutputC se consumira
        }else{
            DEL9();
        }
    }

    public void DEL9(){
        devourToken();
        if(tokenActual.Token.equals("WHERE")){
            consumirToken();
            nextToken();
            SearchCWMatch();
            FinSentencia();
        }else{
            FinSentencia();
        }
    }

    public void COLNAME(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals(".")){
                consumirToken();
                nextToken();
                COLNAME1();
            }else{
                printError(".");
            }
        }else{
            printError("Identificador");
        }
    }

    public void COLNAME1(){
        devourToken();
        if(tokenActual.Token.equals("*")){
            consumirToken();
            nextToken();
        }else if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
        }else{
            printError("* o un Identificador");
        }
    }

    public void DML1(){
        devourToken();
        DML2();
        DML3();
    }

    public void DML2(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            COLNAME();
        }else{
            SEXP();
        }
    }

    public void DML3(){
        devourToken();
        if(tokenActual.Token.equals("AS")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                DML4();
            }else{
                printError("Identificador");
            }
        }
    }

    public void DML4(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            DML1();
        }
    }

    public void OutputC(){
        devourToken();
        if(tokenActual.Token.equals("OUTPUT")){
            consumirToken();
            nextToken();
            DML1();
            OUTCL1();
        }
    }

    public void OUTCL1(){
        devourToken();
        if(tokenActual.Token.equals("INTO")){
            consumirToken();
            nextToken();
            OUTCL2();
        }
    }

    public void OUTCL2(){
        devourToken();
        if(tokenActual.Token.equals("@")){
            consumirToken();
            nextToken();
            if(tokenActual.tipo.equals("Identificador")){
                consumirToken();
                nextToken();
                OUTCL3();
            }else{
                printError("Identificador");
            }
        }else if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            OUTCL3();
        }else{
            printError("@ o un Identificador");
        }
    }

    public void OUTCL3(){
        devourToken();
        if(tokenActual.Token.equals("(")){
            COLST(); //No se consume token por que en COLST se consumira
        }
    }

    public void COLST(){
        devourToken();
        if(tokenActual.Token.equals("(")){
            consumirToken();
            nextToken();
            COLST1();
        }else{
            printError("(");
        }
    }

    public void COLST1(){
        devourToken();
        if(tokenActual.tipo.equals("Identificador")){
            consumirToken();
            nextToken();
            COLST2();
        }else{
            printError("Identificador");
        }
    }

    public void COLST2(){
        devourToken();
        if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            COLST1();
        }else if(tokenActual.Token.equals(")")){
            consumirToken();
            nextToken();
        }else{
            printError(", o )");
        }
    }

    public void FinSentencia(){
        devourToken();
        if(tokenActual.Token.equals(";") || tokenActual.Token.equals("GO")){
                consumirToken();
                nextToken();
                Inicio();
        }else{
            printError("GO o ;");
        }
    }

    public void SearchCWMatch(){
        devourToken();
        if(tokenActual.Token.equals("NOT")){
            consumirToken();
            nextToken();
            Predicado();
            SCWM2();
        }else if(tokenActual.Token.equals("(")){
            consumirToken();
            nextToken();
            SearchCWMatch();
            if(tokenActual.Token.equals(")")){
                consumirToken();
                nextToken();
                SCWM2();
            }else{
                printError(")");
            }
        }else{
            Predicado();
            SCWM2();
        }
    }

    public void SCWM2(){
        devourToken();
        if(tokenActual.Token.equals("AND")){
            consumirToken();
            nextToken();
            SCWM3();
        }else if(tokenActual.Token.equals("OR")){
            consumirToken();
            nextToken();
            SCWM3();
        }else{
            //SCWM5();
        }
    }

    public void SCWM3(){
        devourToken();
        if(tokenActual.Token.equals("NOT")){
            consumirToken();
            nextToken();
            SCWM4();
        }else{
            SCWM4();
        }
    }

    public void SCWM4(){
        devourToken();
        if(tokenActual.Token.equals("(")){
            consumirToken();
            nextToken();
            SearchCWMatch();
            if(tokenActual.Token.equals(")")){
                consumirToken();
                nextToken();
                SCWM5();
            }else{
                printError(")");
            }
        }else{
            Predicado();
            SCWM5();
        }
    }

    public void SCWM5(){
        devourToken();
        /*if(tokenActual.Token.equals(",")){
            consumirToken();
            nextToken();
            SearchCWMatch();
        }*/
        SCWM2();
    }

    public void Predicado(){
        devourToken();
        if(tokenActual.Token.equals("CONTAINS")){
            consumirToken();
            nextToken();
            if(tokenActual.Token.equals("(")){
                consumirToken();
                nextToken();
                FT1();
                if(tokenActual.Token.equals(",")){
                    consumirToken();
                    nextToken();
                    CSC1();
                    if(tokenActual.Token.equals(")")){
                        consumirToken();
                        nextToken();
                    }else{
                        printError(")");
                    }
                }else{
                    printError(",");
                }
            }else{
                printError("(");
            }
        }else if(tokenActual.Token.equals("FREETEXT")){
            consumirToken();
            nextToken();
            if (tokenActual.Token.equals("(")){
                consumirToken();
                nextToken();
                FT1();
                if(tokenActual.Token.equals(",")){
                    consumirToken();
                    nextToken();
                    if(tokenActual.tipo.equals("Cadena")){
                        consumirToken();
                        nextToken();
                        if(tokenActual.Token.equals(")")){

                        }else{
                            printError(")");
                        }
                    }else{
                        printError("Cadena");
                    }
                }else{
                    printError(",");
                }
            }else{
                printError("(");
            }
        }
    }

    public void CSC1(){
        devourToken();
        if(tokenActual.tipo.equals("Cadena")){
            consumirToken();
            nextToken();
        }else if(tokenActual.Token.equals("(")){
            consumirToken();
            nextToken();
            CSC1();
            if(tokenActual.Token.equals(")")){
                consumirToken();
                nextToken();
                CSC2();
            }else{
                printError(")");
            }
        }else{
            printError("Cadena o el simbolo \"(\"");
        }
    }

    public void CSC2(){
        devourToken();
        if(tokenActual.Token.equals("AND")){

        }else if(tokenActual.Token.equals("OR") || tokenActual.Token.equals("||") || tokenActual.Token.equals("&&")){

        }
    }

    public void CSC3(){
        devourToken();
        if(tokenActual.Token.equals("NOT")){
            consumirToken();
            nextToken();
            CSC1();
        }else{
            CSC1();
        }
    }
